# flutter_location_ffi

./: README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/: settings.gradle.kts
example/android/app/: build.gradle.kts
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: flutter_location_ffi.podspec
ios/Classes/: Constants.swift  CoreLocationManager+Delegate.swift  CoreLocationManager.swift  CoreLocationManagerLifecycleKeeper.swift  CoreLocationStreamManager+Delegate.swift  CoreLocationStreamManager.swift  Disposable.swift  ErrorMessages.swift  FlutterLocationFfiPlugin.swift  LifecycleKeeper.swift  LifecycleKeeperDelegate.swift  LocationDataFactory.swift  LocationManager.swift  LocationPermission.swift  LocationPermissionDelegate.swift  LocationPermissionManager+Delegate.swift  LocationPermissionManager.swift  LocationSettingsConfigurable.swift  LocationStreamManager.swift  PermissionManager.swift  flutter_location_ffi.h  iOSLocationSettings.swift
lib/: flutter_location_ffi.dart
lib/src/: activity_type.dart  android_granularity.dart  android_location_notification_priority.dart  android_location_notification_settings.dart  android_location_settings.dart  apple_location_settings.dart  flutter_location.dart  location_data.dart  location_permission.dart  location_priority.dart  location_settings.dart
src/: CMakeLists.txt  flutter_location_ffi.cpp  flutter_location_ffi.h
(+73 files in other folders)
